--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mangodb": "^1.0.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
